changes in flying

--- a/flying.html
+++ b/flying.html
@@ -364,8 +364,8 @@
                 </div>
             </div>
 
-            <div class="container-fluid d-flex flex-lg-row flex-md-column  flex-sm-column avsb controlcols">
-                <div class="col-lg-4 col-md-12 col-sm-12">
+            <div class="container-fluid avsb controlcols">
+                <div class="col-lg-4 col-md-12">
                     <h5>Ailerons</h5>
                     <p>The ailerons raise and lower the wings. The pilot controls the roll of the plane by raising
                         one aileron or the other with a control wheel. Turning the control wheel clockwise raises
@@ -376,7 +376,7 @@
                 </div>
 
 
-                <div class="col-lg-4 col-md-12  col-sm-12">
+                <div class="col-lg-4 col-md-12 ">
                     <h5>Rudder</h5>
                     <p>The rudder works to control the yaw of the plane. The pilot moves rudder left and right, with
                         left and right pedals. Pressing the right rudder pedal moves the rudder to the right. This
