--- a/flying.html
+++ b/flying.html
@@ -392,7 +392,7 @@
                 </div>
 
 
-                <div class="col-lg-4 col-md-12  col-sm-12">
+                <div class="col-lg-4 col-md-12">
                     <h5>Elevators</h5>
                     <p>The elevators which are on the tail section are used to control the pitch of the plane. A
                         pilot uses a control wheel to raise and lower the elevators, by moving it forward to back
