--- a/airliners.html
+++ b/airliners.html
@@ -52,7 +52,7 @@
           <li class="nav-item active">
             <a class="nav-link" href="airliners.html"><i class=""></i>Airliners</a>
           </li>
-          <li class="nav-item ">
+          <li class="nav-item">
             <a class="nav-link" href="flying.html"><i class=""></i>Flying</a>
           </li>
 
@@ -315,14 +315,11 @@
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-pause="false">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img src="images\PngItem_4001451.png" class="pb-5 my-auto d-block"
-                        style="width: 100%; margin-top: -5px;" alt="">
+                      <img src="images\PngItem_4001451.png" class="pb-5 mb-sm-5 my-auto d-block"
+                        style="width: 100%; padding-bottom: 40%; " alt="">
 
                     </div>
-                    <div class="carousel-item">
-                      <img src="images\PngItem_6685407.png" class="pb-5 my-auto d-block" style="width: 100%;" alt="">
 
-                    </div>
 
                   </div>
 
@@ -429,12 +426,13 @@
     </div>
     <div class="vidjumbo m-0 row ">
 
-      <div class="jumbotron airjumbo col-lg-7 bg-transparent mb-0 pb-0">
-        <div class="jumb m-5 col-md-12 d-flex flex-column align-items-sm-start ml-sm-1 mr-sm-2 ">
-          <h1 class="display-4 text-white">Airplanes Landings are ❤</h1>
-          <p class="lead text-light">This is going to be super amazing! See How they Land! </p>
+      <div class="jumbotron airjumbo col-lg-7 col-md-12 bg-transparent mb-0 pb-0 ml-0">
+        <div class="jumb m-5 col-sm-12 col-md-12 d-flex flex-column  mr-sm-2 ">
+          <h1 class="display-4 text-white text-wrap">Airplanes Landings are ❤</h1>
+          <p class="lead text-light text-wrap">This is going to be super amazing! See How they Land! </p>
           <hr class="my-4 text-white">
-          <p class="text-white-50">Fun Fact: <br> The plane Landing in video is often called as "Queen Of The Skies".
+          <p class="text-white-50 text-wrap">Fun Fact: <br> The plane Landing in video is often called as "Queen Of The
+            Skies".
             <br> Boeing 747-8</p>
 
         </div>
