--- a/flying.html
+++ b/flying.html
@@ -364,44 +364,46 @@
                 </div>
             </div>
 
-            <div class="container-fluid avsb controlcols">
-                <div class="col-lg-4 col-md-12">
-                    <h5>Ailerons</h5>
-                    <p>The ailerons raise and lower the wings. The pilot controls the roll of the plane by raising
-                        one aileron or the other with a control wheel. Turning the control wheel clockwise raises
-                        the right aileron and lowers the left aileron, which rolls the aircraft to the right.</p>
-                    <div class="d-flex justify-content-center ">
-                        <img src="images/Roll.jpg" class="mt-4 mb-4" alt="">
-                    </div>
-                </div>
-
-
-                <div class="col-lg-4 col-md-12 ">
-                    <h5>Rudder</h5>
-                    <p>The rudder works to control the yaw of the plane. The pilot moves rudder left and right, with
-                        left and right pedals. Pressing the right rudder pedal moves the rudder to the right. This
-                        yaws the aircraft to the right. Used together, the rudder and the ailerons are used to turn
-                        the plane.
-
-
-                    </p>
-                    <div class="d-flex justify-content-center ">
-                        <img src="images/Yaw.jpg" class="mt-4 mb-4" alt="">
+            <div class="container-fluid flex-sm-column controlcols">
+                <div class="row avsb">
+                    <div class="col-lg-4 col-md-12 ">
+                        <h5>Ailerons</h5>
+                        <p>The ailerons raise and lower the wings. The pilot controls the roll of the plane by raising
+                            one aileron or the other with a control wheel. Turning the control wheel clockwise raises
+                            the right aileron and lowers the left aileron, which rolls the aircraft to the right.</p>
+                        <div class="d-flex justify-content-center ">
+                            <img src="images/Roll.jpg" class="mt-4 mb-4" alt="">
+                        </div>
                     </div>
 
-                </div>
+
+                    <div class="col-lg-4 col-md-12 ">
+                        <h5>Rudder</h5>
+                        <p>The rudder works to control the yaw of the plane. The pilot moves rudder left and right, with
+                            left and right pedals. Pressing the right rudder pedal moves the rudder to the right. This
+                            yaws the aircraft to the right. Used together, the rudder and the ailerons are used to turn
+                            the plane.
 
 
-                <div class="col-lg-4 col-md-12">
-                    <h5>Elevators</h5>
-                    <p>The elevators which are on the tail section are used to control the pitch of the plane. A
-                        pilot uses a control wheel to raise and lower the elevators, by moving it forward to back
-                        ward. Lowering the elevators makes the plane nose go down and allows the plane to go down.
-                        By raising the elevators the pilot can make the plane go up.</p>
-                    <div class="d-flex justify-content-center ">
-                        <img src="images/Pitch.jpg" class="mb-4" alt="">
+                        </p>
+                        <div class="d-flex justify-content-center ">
+                            <img src="images/Yaw.jpg" class="mt-4 mb-4" alt="">
+                        </div>
+
                     </div>
 
+
+                    <div class="col-lg-4 col-md-12">
+                        <h5>Elevators</h5>
+                        <p>The elevators which are on the tail section are used to control the pitch of the plane. A
+                            pilot uses a control wheel to raise and lower the elevators, by moving it forward to back
+                            ward. Lowering the elevators makes the plane nose go down and allows the plane to go down.
+                            By raising the elevators the pilot can make the plane go up.</p>
+                        <div class="d-flex justify-content-center ">
+                            <img src="images/Pitch.jpg" class="mb-4" alt="">
+                        </div>
+
+                    </div>
                 </div>
             </div>
 
