flying page modifs

--- a/flying.html
+++ b/flying.html
@@ -158,6 +158,34 @@
             </a>
         </div>
 
+        <section class="slanted-div2">
+            <div class="container d-flex flex-md-row " style="transform:rotate(180deg); top: -2.4vmin;">
+
+                <!-- <div class="col-md-5 col-sm-12 d-flex justify-content-center pt-sm-4">
+
+                    <img src="images/Boeing_747-100_3-view.png" class="" alt="" style="width: 80%;">
+                </div> -->
+                <div class="col-md-12 d-flex justify-content-center  align-self-sm-center flex-column">
+
+                    <h2 class="text-left text-white-50 ">Well Yes!</h2>
+                    <h1 class="text-left text-white ">
+                        We know Pilots Fly the Plane! <br>But we can Understand some of the Basics how a
+                        plane flies. </h1>
+                    <h3 class="text-left text-primary ">Lets Just Take Off ! Oh, Don't Forget to Learn the
+                        Basics !<br>Tap
+                        the Button Below!
+                    </h3>
+                    <button class="btn btn-link border-primary py-2 my-3 align-self-md-start align-self-sm-start"
+                        type="button" name="button">
+                        <a href="#flymain" class="text-danger">Let's See How<i
+                                class="fas fa-plane-departure ml-2"></i></a></button>
+
+
+
+                </div>
+            </div>
+        </section>
+
 
 
     </header>
