--- a/flying.html
+++ b/flying.html
@@ -158,7 +158,7 @@
             </a>
         </div>
 
-        <section class="slanted-div2">
+        <section class="slanted-div2 opthead">
             <div class="container d-flex flex-md-row " style="transform:rotate(180deg); top: -2.4vmin;">
 
                 <!-- <div class="col-md-5 col-sm-12 d-flex justify-content-center pt-sm-4">
