--- a/flying.html
+++ b/flying.html
@@ -226,7 +226,7 @@
                                 was never tried.
                             </p>
                         </div>
-                        <div class="col-lg-5 d-flex flex-md-row justify-content-center">
+                        <div class="col-lg-5 col-sm-12 d-flex flex-md-row justify-content-center">
                             <img src="images/foillift.jpg" alt="" class="pt-lg-0 pt-md-5 pt-sm-5 ">
                         </div>
 
