--- a/flying.html
+++ b/flying.html
@@ -248,80 +248,76 @@
 
                 </div>
             </div>
-            <div class="diagonal-box avsb">
-                <div class="content0 d-flex flex-md-row flex-sm-column justify-content-center">
-                    <div class="written d-flex flex-column col-md-7 col-sm-12 justify-content-center">
+        </div>
+        <div class="diagonal-box avsb">
+            <div class="content0 d-flex flex-md-row flex-sm-column justify-content-center">
+                <div class="written d-flex flex-column col-md-7 col-sm-12 justify-content-center">
 
-                        <h3 class="pb-5 flex-md-column align-self-center">Forces of Flight</h3>
-                        <h5 class=" text-center pt-2 mb-4 pb-2 pl-4">Four forces of flight</h5>
-                        <p class="align-self-center text-left p-0 m-0">
+                    <h3 class="pb-5 flex-md-column align-self-center">Forces of Flight</h3>
+                    <h5 class=" text-center pt-2 mb-4 pb-2 pl-4">Four forces of flight</h5>
+                    <p class="align-self-center text-left p-0 m-0">
 
 
-                            Lift - upward <br>
-                            Drag - backward <br>
-                            Weight - downward <br>
-                            Thrust - forward
+                        Lift - upward <br>
+                        Drag - backward <br>
+                        Weight - downward <br>
+                        Thrust - forward
+                    </p>
+                </div>
+                <div class="airpic1 d-flex flex-column col-md-5 col-sm-12 justify-content-center">
+                    <img src="images/forces.gif" alt="" class="align-self-center mt-md-0 mt-sm-5" style="width: 80%">
+
+                </div>
+
+
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+        <div class="container-fluid mt-0">
+            <div class="avsb mt-5 mb-4 pt-5 ml-4 contentfly2">
+
+                <div class="row">
+                    <div class="col-lg-7">
+
+                        <h3 class="pb-2">Controlling the Flight of a Plane</h3>
+                        <p>How does a plane fly? Let's pretend that our arms are wings. If we place one wing down
+                            and one wing up we can use the roll to change the direction of the plane. We are helping
+                            to turn the plane by yawing toward one side. If we raise our nose, like a pilot can
+                            raise the nose of the plane, we are raising the pitch of the plane. All these dimensions
+                            together combine to control the flight of the plane. A pilot of a plane has special
+                            controls that can be used to fly the plane. There are levers and buttons that the pilot
+                            can push to change the yaw, pitch and roll of the plane. <br>
+                            To roll the plane to the right or left, the ailerons are raised on one wing and lowered
+                            on the other. The wing with the lowered aileron rises while the wing with the raised
+                            aileron drops. <br>
+                            Pitch makes a plane descend or climb. The pilot adjusts the elevators on the tail to
+                            make a plane descend or climb. Lowering the elevators caused the airplane's nose to
+                            drop, sending the plane into a down. Raising the elevators causes the airplane to climb.
+                            <br>
+                            Yaw is the turning of a plane. When the rudder is turned to one side, the airplane moves
+                            left or right. The airplane's nose is pointed in the same direction as the direction of
+                            the rudder. The rudder and the ailerons are used together to make a turn
                         </p>
                     </div>
-                    <div class="airpic1 d-flex flex-column col-md-5 col-sm-12 justify-content-center">
-                        <img src="images/forces.gif" alt="" class="align-self-center mt-md-0 mt-sm-5"
-                            style="width: 80%">
-
+                    <div class="col-lg-5 d-flex flex-md-row justify-content-center">
+                        <img src="images/cockpit.jpg" alt="" class="align-self-baseline pt-5">
                     </div>
 
-
-                </div>
-            </div>
-
-
-
-
-
-
-
-
-            <div class="container-fluid mt-0">
-                <div class="avsb mt-5 mb-4 pt-5 ml-4 contentfly2">
-
-                    <div class="row">
-                        <div class="col-lg-7">
-
-                            <h3 class="pb-2">Controlling the Flight of a Plane</h3>
-                            <p>How does a plane fly? Let's pretend that our arms are wings. If we place one wing down
-                                and one wing up we can use the roll to change the direction of the plane. We are helping
-                                to turn the plane by yawing toward one side. If we raise our nose, like a pilot can
-                                raise the nose of the plane, we are raising the pitch of the plane. All these dimensions
-                                together combine to control the flight of the plane. A pilot of a plane has special
-                                controls that can be used to fly the plane. There are levers and buttons that the pilot
-                                can push to change the yaw, pitch and roll of the plane. <br>
-                                To roll the plane to the right or left, the ailerons are raised on one wing and lowered
-                                on the other. The wing with the lowered aileron rises while the wing with the raised
-                                aileron drops. <br>
-                                Pitch makes a plane descend or climb. The pilot adjusts the elevators on the tail to
-                                make a plane descend or climb. Lowering the elevators caused the airplane's nose to
-                                drop, sending the plane into a down. Raising the elevators causes the airplane to climb.
-                                <br>
-                                Yaw is the turning of a plane. When the rudder is turned to one side, the airplane moves
-                                left or right. The airplane's nose is pointed in the same direction as the direction of
-                                the rudder. The rudder and the ailerons are used together to make a turn
-                            </p>
-                        </div>
-                        <div class="col-lg-5 d-flex flex-md-row justify-content-center">
-                            <img src="images/cockpit.jpg" alt="" class="align-self-baseline pt-5">
-                        </div>
-
-                        <h5 class="pt-3 pb-2 pl-2 pr-2">How does a Pilot Control the Plane?</h5>
-                        <p class="pb-3 pl-2 pr-2">To control a plane a pilot uses several instruments... <br>
-                            The pilot controls the engine power using the throttle. Pushing the throttle increases
-                            power, and pulling it decreases power. <br>
-                            The ailerons raise and lower the wings. The pilot controls the roll of the plane by raising
-                            one aileron or the other with a control wheel. Turning the control wheel clockwise raises
-                            the right aileron and lowers the left aileron, which rolls the aircraft to the right.</p>
-                        <div class="dropdown-divider mb-3 pt-5"></div>
-                    </div>
-
-
-
+                    <h5 class="pt-3 pb-2 pl-2 pr-2">How does a Pilot Control the Plane?</h5>
+                    <p class="pb-3 pl-2 pr-2">To control a plane a pilot uses several instruments... <br>
+                        The pilot controls the engine power using the throttle. Pushing the throttle increases
+                        power, and pulling it decreases power. <br>
+                        The ailerons raise and lower the wings. The pilot controls the roll of the plane by raising
+                        one aileron or the other with a control wheel. Turning the control wheel clockwise raises
+                        the right aileron and lowers the left aileron, which rolls the aircraft to the right.</p>
+                    <div class="dropdown-divider mb-3 pt-5"></div>
                 </div>
 
 
@@ -330,110 +326,114 @@
 
 
 
+        </div>
 
-            <div class="diagonal-box2 avsb aircaro">
-                <div class="content2 row ">
-                    <div class="col-lg-7 col-md-12 d-flex justify-content-center ">
-                        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-pause="false"
-                            style="width:70%; max-height: 80%;">
-                            <ol class="carousel-indicators">
-                                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                            </ol>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active mb-sm-2">
-                                    <img src="images/ailerons.jpg" class="d-block w-100" alt="..." style="">
-                                    <div class="carousel-caption d-none d-md-block">
 
-                                    </div>
-                                </div>
-                                <div class="carousel-item atem2 pb-1 mb-sm-2">
-                                    <img src="images/Elevators.jpg" class="d-block w-100" alt="..." style="">
-                                    <div class=" carousel-caption d-none d-md-block">
 
-                                    </div>
-                                </div>
-                                <div class="carousel-item atem3  mb-sm-2">
-                                    <img src="images/rudder.jpg" class="d-block w-100" alt="..." style="">
-                                    <div class="carousel-caption d-none d-md-block">
 
-                                    </div>
+        <div class="diagonal-box2 avsb aircaro">
+            <div class="content2 row ">
+                <div class="col-lg-7 col-md-12 d-flex justify-content-center ">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-pause="false"
+                        style="width:70%; max-height: 80%;">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active mb-sm-2">
+                                <img src="images/ailerons.jpg" class="d-block w-100" alt="..." style="">
+                                <div class="carousel-caption d-none d-md-block">
+
                                 </div>
                             </div>
-                            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button"
-                                data-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button"
-                                data-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Next</span>
-                            </a>
+                            <div class="carousel-item atem2 pb-1 mb-sm-2">
+                                <img src="images/Elevators.jpg" class="d-block w-100" alt="..." style="">
+                                <div class=" carousel-caption d-none d-md-block">
+
+                                </div>
+                            </div>
+                            <div class="carousel-item atem3  mb-sm-2">
+                                <img src="images/rudder.jpg" class="d-block w-100" alt="..." style="">
+                                <div class="carousel-caption d-none d-md-block">
+
+                                </div>
+                            </div>
                         </div>
+                        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button"
+                            data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button"
+                            data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+                <div class="col-lg-5 col-md-12 d-flex justify-content-center flex-column mt-md-2">
+                    <h5 class=" ">How does a Pilot Control the Plane?</h5>
+                    <p class="text-muted">To control a plane a pilot uses several instruments... <br>
+                        The pilot controls the engine power using the throttle. Pushing the throttle increases
+                        power, and pulling it decreases power. <br>
+                    </p>
+                </div>
+
+
+            </div>
+        </div>
+
+        <div class="container-fluid flex-sm-column controlcols">
+            <div class="row avsb">
+                <div class="col-lg-4 col-md-12 ">
+                    <h5>Ailerons</h5>
+                    <p>The ailerons raise and lower the wings. The pilot controls the roll of the plane by raising
+                        one aileron or the other with a control wheel. Turning the control wheel clockwise raises
+                        the right aileron and lowers the left aileron, which rolls the aircraft to the right.</p>
+                    <div class="d-flex justify-content-center ">
+                        <img src="images/Roll.jpg" class="mt-4 mb-4" alt="">
+                    </div>
+                </div>
+
+
+                <div class="col-lg-4 col-md-12 ">
+                    <h5>Rudder</h5>
+                    <p>The rudder works to control the yaw of the plane. The pilot moves rudder left and right, with
+                        left and right pedals. Pressing the right rudder pedal moves the rudder to the right. This
+                        yaws the aircraft to the right. Used together, the rudder and the ailerons are used to turn
+                        the plane.
+
+
+                    </p>
+                    <div class="d-flex justify-content-center ">
+                        <img src="images/Yaw.jpg" class="mt-4 mb-4" alt="">
                     </div>
 
+                </div>
 
 
-
-
-
-
-                    <div class="col-lg-5 col-md-12 d-flex justify-content-center flex-column mt-md-2">
-                        <h5 class=" ">How does a Pilot Control the Plane?</h5>
-                        <p class="text-muted">To control a plane a pilot uses several instruments... <br>
-                            The pilot controls the engine power using the throttle. Pushing the throttle increases
-                            power, and pulling it decreases power. <br>
-                        </p>
+                <div class="col-lg-4 col-md-12">
+                    <h5>Elevators</h5>
+                    <p>The elevators which are on the tail section are used to control the pitch of the plane. A
+                        pilot uses a control wheel to raise and lower the elevators, by moving it forward to back
+                        ward. Lowering the elevators makes the plane nose go down and allows the plane to go down.
+                        By raising the elevators the pilot can make the plane go up.</p>
+                    <div class="d-flex justify-content-center ">
+                        <img src="images/Pitch.jpg" class="mb-4" alt="">
                     </div>
-
 
                 </div>
             </div>
-
-            <div class="container-fluid flex-sm-column controlcols">
-                <div class="row avsb">
-                    <div class="col-lg-4 col-md-12 ">
-                        <h5>Ailerons</h5>
-                        <p>The ailerons raise and lower the wings. The pilot controls the roll of the plane by raising
-                            one aileron or the other with a control wheel. Turning the control wheel clockwise raises
-                            the right aileron and lowers the left aileron, which rolls the aircraft to the right.</p>
-                        <div class="d-flex justify-content-center ">
-                            <img src="images/Roll.jpg" class="mt-4 mb-4" alt="">
-                        </div>
-                    </div>
-
-
-                    <div class="col-lg-4 col-md-12 ">
-                        <h5>Rudder</h5>
-                        <p>The rudder works to control the yaw of the plane. The pilot moves rudder left and right, with
-                            left and right pedals. Pressing the right rudder pedal moves the rudder to the right. This
-                            yaws the aircraft to the right. Used together, the rudder and the ailerons are used to turn
-                            the plane.
-
-
-                        </p>
-                        <div class="d-flex justify-content-center ">
-                            <img src="images/Yaw.jpg" class="mt-4 mb-4" alt="">
-                        </div>
-
-                    </div>
-
-
-                    <div class="col-lg-4 col-md-12">
-                        <h5>Elevators</h5>
-                        <p>The elevators which are on the tail section are used to control the pitch of the plane. A
-                            pilot uses a control wheel to raise and lower the elevators, by moving it forward to back
-                            ward. Lowering the elevators makes the plane nose go down and allows the plane to go down.
-                            By raising the elevators the pilot can make the plane go up.</p>
-                        <div class="d-flex justify-content-center ">
-                            <img src="images/Pitch.jpg" class="mb-4" alt="">
-                        </div>
-
-                    </div>
-                </div>
-            </div>
+        </div>
 
 
 
