--- a/flying.html
+++ b/flying.html
@@ -226,8 +226,9 @@
                                 was never tried.
                             </p>
                         </div>
-                        <div class="col-lg-5 col-sm-12 d-flex flex-md-row justify-content-center">
-                            <img src="images/foillift.jpg" alt="" class="pt-lg-0 pt-md-5 pt-sm-5 ">
+                        <div class="col-md-12 col-lg-5 d-flex justify-content-center ">
+
+                            <img src="images/foillift.jpg" alt="" class="pt-md-5 pt-sm-5 align-self-center cokpitpic">
                         </div>
 
                         <h5 class="pt-3 pb-2 pl-2 pr-2">How Wings Lift the Plane</h5>
@@ -306,8 +307,8 @@
                             the rudder. The rudder and the ailerons are used together to make a turn
                         </p>
                     </div>
-                    <div class="col-lg-5 d-flex flex-md-row justify-content-center">
-                        <img src="images/cockpit.jpg" alt="" class="align-self-baseline pt-5">
+                    <div class="col-lg-5 col-md-12 d-flex justify-content-center">
+                        <img src="images/cockpit.jpg" alt="" class="align-self-center pt-5 cokpitpic">
                     </div>
 
                     <h5 class="pt-3 pb-2 pl-2 pr-2">How does a Pilot Control the Plane?</h5>
